--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,17 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+    <div class="card position-absolute top-50 start-50 translate-middle">
+      <div class="card-body">
+        <h1 class="paloTop position-absolute top-0 start-0 ps-3 pt-2">
+          *
+        </h1>
+        <h1 class="number position-absolute top-50 start-50 translate-middle">
+          X
+        </h1>
+        <h1 class="paloBottom position-absolute bottom-0 end-0 pe-3">
+          *
+        </h1>
       </div>
     </div>
   </body>
