--- a/src/index.html
+++ b/src/index.html
@@ -15,16 +15,18 @@
   <body>
     <div class="card position-absolute top-50 start-50 translate-middle">
       <div class="card-body">
-        <h1 class="paloTop position-absolute top-0 start-0 ps-3 pt-2">
+        <h1 class="paloTop">
           *
         </h1>
         <h1 class="number position-absolute top-50 start-50 translate-middle">
           X
         </h1>
-        <h1 class="paloBottom position-absolute bottom-0 end-0 pe-3">
+        <h1 class="paloBottom">
           *
         </h1>
       </div>
     </div>
+    <script src="app.js
+    "></script>
   </body>
 </html>
