--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
         </h1>
       </div>
     </div>
+    <button class="btn btn-dark">click me</button>
     <script src="app.js
     "></script>
   </body>
